[package]
name = "flatbuffers-pool"
version = "0.1.2"
authors = ["Keith Noguchi <keith.noguchi@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/keithnoguchi/flatbuffers-pool"
homepage = "https://github.com/keithnoguchi/flatbuffers-pool"
documentation = "https://docs.rs/flatbuffers-pool"
description = "FlatBufferBuilder pool"
keywords = ["flatbuffers", "pool", "zero-copy"]
categories = ["encoding", "data-structures", "memory-management"]
readme = "README.md"

[dependencies]
parking_lot = "0.10"
flatbuffers = "0.6"
once_cell = "1"

[dev-dependencies]
crossbeam-queue = "0.2"
